--- a/angular.json
+++ b/angular.json
@@ -49,8 +49,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "1MB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "2Mb",
+                  "maximumError": "2MB"
                 },
                 {
                   "type": "anyComponentStyle",
